--- a/Views/Bookings/Delete.cshtml
+++ b/Views/Bookings/Delete.cshtml
@@ -3,12 +3,11 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<div class="container">
+<h1>Avboka</h1>
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Är du säker på att du vill avboka?</h3>
 <div>
-    <h4>Booking</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -45,7 +44,8 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Avboka" class="btn btn-danger" /> |
+        <a asp-action="Index">Tillbaka</a>
     </form>
+</div>
 </div>
