--- a/Views/Bookings/index.cshtml
+++ b/Views/Bookings/index.cshtml
@@ -3,19 +3,69 @@
 @{
     ViewData["Title"] = "Index";
 }
+<div class="container">
+    <br>
+<h1>Dina aktiva bokningar</h1><br>
 
-<h1>Dina aktiva bokningar</h1>
 
-<p>
-    <a asp-action="Create">Boka!</a>
-</p>
 @if (!Model.Any())
 {
-    <td>You don't have any active bookings</td>
+    <td>Du har inga aktiva bokningar för tillfället!</td>
+    <p>
+    <a asp-action="Create">Boka tjänst!</a>
+</p>
 }
 else
 {
-    <table class="table">
+        <div class="row border-dark border-top-two theader-text pb-2">
+        <div class="col-md-2">
+            @Html.DisplayNameFor(model => model.Car)
+        </div>
+        <div class="col-md-2">
+            @Html.DisplayNameFor(model => model.Service)
+        </div>
+        <div class="col-md-2">
+            @Html.DisplayNameFor(model => model.Date)
+        </div>
+        <div class="col-md-2">
+            @Html.DisplayNameFor(model => model.OtherRequests)
+        </div>
+        <div class="col-md-3">
+            @Html.DisplayNameFor(model => model.Address)
+        </div>
+
+    </div>
+@foreach (var item in Model)
+{
+    <div class="row pt-2 border-dark">
+        <div class="col-md-2">
+            @Html.DisplayFor(modelItem => item.Car)
+        </div>
+        <div class="col-md-2">
+            @Html.DisplayFor(modelItem => item.Service)
+        </div>
+        <div class="col-md-2">
+            @Html.DisplayFor(modelItem => item.Date)
+        </div>
+        <div class="col-md-2">
+            @Html.DisplayFor(modelItem => item.OtherRequests)
+        </div>
+        <div class="col-md-3">
+            <div class="mapouter">
+                <div class="gmap_canvas">
+                    <iframe width="260" height="199" id="gmap_canvas" src="https://maps.google.com/maps?q=@item.Address&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="yes" marginheight="0" marginwidth="0"></iframe>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-1 test">
+            <a asp-action="Edit" asp-route-id="@item.Id">Ändra</a>
+            <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+            <a asp-action="Delete" asp-route-id="@item.Id">Avboka</a>
+        </div>
+    </div>
+}
+
+    @* <table class="table">
     <thead>
         <tr>
             <th>
@@ -52,16 +102,20 @@ else
                 @Html.DisplayFor(modelItem => item.OtherRequests)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Address)
+                <div class="mapouter">
+                    <div class="gmap_canvas">
+                        <iframe width="300" height="199" id="gmap_canvas" src="https://maps.google.com/maps?q=@item.Address&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                        </div></div>
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Edit" asp-route-id="@item.Id">Ändra</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Avboka</a>
             </td>
         </tr>
 }
     </tbody>
-</table>
+</table> *@
+
 }
 
