--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,62 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "AutoFix";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+    <div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel" style="min-height: 100vh;">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="mask flex-center">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-7 col-12 order-md-1 order-2">
+              <h4>Stenskott?</h4>
+              <p>Ett stenskott kan vara början till en spricka i vindrutan. Vänta inte med att laga stenskottet för att slippa byta hela vindrutan!</p>
+              <a  asp-controller="Bookings" asp-action="Create">Boka nu!</a> </div>
+            <div class="col-md-5 col-12 order-md-2 order-1"><img src="images/stenskott.png" class="mx-auto round-img" alt="slide"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="mask flex-center">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-7 col-12 order-md-1 order-2">
+              <h4>Dags för däckbyte?</h4>
+              <p>Oavsett om det är dags att byta till sommardäck eller om du har fått punktering så kan vi hjälpa dig!</p>
+              <a  asp-controller="Bookings" asp-action="Create">Boka nu!</a> </div>
+            <div class="col-md-5 col-12 order-md-2 order-1"><img src="images/punktering.png" class="mx-auto round-img" alt="slide"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="mask flex-center">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-7 col-12 order-md-1 order-2">
+              <h4>Svårt att hinna med besiktningen?</h4>
+              <p>Vi hämtar din bil och besiktar den åt dig!</p>
+              <a  asp-controller="Bookings" asp-action="Create">Boka nu!</a> </div>
+            <div class="col-md-5 col-12 order-md-2 order-1"><img src="images/besiktning.png" class="mx-auto round-img" alt="slide"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="mask flex-center">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-7 col-12 order-md-1 order-2">
+              <h4>Dags för vårstädning?</h4>
+              <p>Vi fixar både invändig och utvändig rekond!</p>
+              <a  asp-controller="Bookings" asp-action="Create">Boka nu!</a> </div>
+            <div class="col-md-5 col-12 order-md-2 order-1"><img src="images/tvatt.png" class="mx-auto round-img" alt="slide"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  @* <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a> </div> *@
