--- a/Views/Shared/_Layout.cshtml.css
+++ b/Views/Shared/_Layout.cshtml.css
@@ -1,6 +1,8 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
-
+header{
+  min-height: 300px !important;
+}
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -8,7 +10,7 @@ a.navbar-brand {
 }
 
 a {
-  color: #0077cc;
+  color: #000000;
 }
 
 .btn-primary {
@@ -24,10 +26,10 @@ a {
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+  border-top: 2px solid #000000 !important;
 }
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 2px solid #000000 !important;
 }
 
 .box-shadow {
@@ -46,3 +48,4 @@ button.accept-policy {
   white-space: nowrap;
   line-height: 60px;
 }
+
